# egui_cable

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
examples/: connect.rs  custom_look.rs  disconnect.rs  full_control.rs  lock.rs  simple.rs
src/: cable.rs  cable_control.rs  cable_label.rs  cable_params.rs  cable_state.rs  custom_widget.rs  default_cable.rs  default_plug.rs  default_port.rs  event.rs  id.rs  lib.rs  plug.rs  plug_params.rs  port.rs  port_id.rs  port_params.rs  response.rs  state.rs  utils.rs
tools/: check-ci.sh
