[package]
name = "egui_cable"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "A generic and extensible data-oriented widget for connecting ports by cables"
homepage = "https://github.com/ryo33/egui_cable"
repository = "https://github.com/ryo33/egui_cable"
readme = "./README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.18"
epaint = "0.18"

[dev-dependencies]
eframe = "0.18"
